--- a/.gitignore
+++ b/.gitignore
@@ -368,16 +368,21 @@ tasks.json
 
 ## CUSTOM
 # Files
+config.lua
 client_assertions.txt
 # Extensions
 *.ini
+*.otb
+*.exe
 *.manifest
+*.otbm
 *.rar
 
 # SFTP for Sublime
 sftp-config.json
 
 # Binaries
+canary
 canary.old
 
 # VCPKG
